2004-09-21 Magnus Hagdorn
 * e2.l.config: fixed wrong output file

2004-09-17 Magnus Hagdorn
 * uploaded EISMINT 1 and 2 test cases